<resources>
    <string name="app_name">login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="passwordHelper">Senha deve ter no máximo 6 caracteres</string>
    <string name="emailHelper">Deve ser um E-mail válido</string>
</resources>